Fix navbar spacing

--- a/src/ui/common/src/components/layouts/menu-sidebar-styles.module.css
+++ b/src/ui/common/src/components/layouts/menu-sidebar-styles.module.css
@@ -1,7 +1,7 @@
 .menu-sidebar {
   max-width: 64px;
   width: 64px;
-  height: 98%;
+  height: 99%;
   max-height: 100vh;
   padding-top: 8px;
   padding-bottom: 8px;
